syntax="proto3";

package trader.orders;
option go_package = "pm.tcfw.com.au/source/trader/api/pb/orders";

import "google/api/annotations.proto";

enum Action {
	BUY = 0;
	SELL = 1;
}

message Order {
	string id = 1;
	string timestamp = 2;
	Action action = 3;
	float units = 4;
	float price = 5;
	string blockID = 6;
}

message GetRequest {
	string blockID = 1;
}

message GetResponse {
	repeated Order orders = 1;
}

message CreateRequest {
	string blockID = 1;
	Action action = 2;
	float price = 3;
	float units = 4;
}

message CreateResponse {
	Order order = 1;
}

service OrdersService {
	rpc Create(CreateRequest) returns (CreateResponse) {
		option (google.api.http) = {
			post: "/v1/orders",
		};
	};
	rpc Get(GetRequest) returns (GetResponse) {
		option (google.api.http) = {
            get: "/v1/orders/{blockID}",
        };
	};
}